# libopencm3-template-cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake  copy_gdbinit.sh  freertos.cmake  gdbinit.cmake  stm32f4-discovery.ld  sysview.cmake  ugfx.cmake  utils.cmake
cmake/: toolchain-arm-none-eabi-gcc.cmake
cmake/stm32/f1/: stm32f103c8.cmake
cmake/stm32/f4/: stm32f407vg.cmake
inc/config/: clock.hpp  gpio.hpp
inc/freertos/: FreeRTOSConfig.h  freertoshelper.h
inc/segger/: SEGGER_SYSVIEW_FreeRTOS.h
inc/tasks/: init.hpp  ledblink.hpp  mytasks.hpp
inc/ugfx/: board_ILI9341.h  gfxconf.h
include/config/: clock.hpp  gpio.hpp
include/freertos/: FreeRTOSConfig.h
lib/FreeRTOSv10.0.1/Source/include/: task.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ARM7_AT91SAM7S/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ARM7_LPC2000/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ARM_CA53_64_BIT/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ARM_CM0/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ARM_CM3/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ARM_CM4F/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ARM_CM4_MPU/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ARM_CR5/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ATMega323/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/ColdFire_V2/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/HCS12/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/IA32_flat/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/MSP430F449/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/MicroBlaze/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/MicroBlazeV8/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/STR75x/: portmacro.h
lib/FreeRTOSv10.0.1/Source/portable/GCC/TriCore_1782/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/: tasks.c
lib/FreeRTOSv10.0.1_patched/Source/include/: FreeRTOS.h  task.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM7_AT91FR40008/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM7_LPC23xx/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM_CA9/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM_CM0/: port.c  portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM_CM3/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM_CM3_MPU/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM_CM4F/: port.c  portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM_CR5/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM_CRx_No_GIC/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/AVR32_UC3/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/CORTUS_APS3/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ColdFire_V2/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/H8S2329/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/MicroBlazeV8/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/NiosII/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/PPC405_Xilinx/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/RL78/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/RX100/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/RX600v2/: portmacro.h
lib/FreeRTOSv9/Source/portable/GCC/ARM7_AT91FR40008/: portmacro.h
lib/FreeRTOSv9/Source/portable/GCC/ARM7_AT91SAM7S/: portmacro.h
lib/FreeRTOSv9/Source/portable/GCC/ARM7_LPC2000/: portmacro.h
lib/FreeRTOSv9/Source/portable/GCC/ARM_CA9/: portmacro.h
lib/FreeRTOSv9/Source/portable/GCC/ARM_CM0/: portmacro.h
lib/FreeRTOSv9/Source/portable/GCC/ARM_CM3_MPU/: portmacro.h
lib/FreeRTOSv9/Source/portable/GCC/ARM_CM4F/: portmacro.h
lib/FreeRTOSv9/Source/portable/GCC/ATMega323/: portmacro.h
lib/FreeRTOSv9_patched/Source/: tasks.c
lib/FreeRTOSv9_patched/Source/include/: FreeRTOS.h  task.h
libs/FreeRTOSv202012.04-LTS/FreeRTOS/FreeRTOS-Plus-TCP/: FreeRTOS_ARP.c  FreeRTOS_DHCP.c  FreeRTOS_DNS.c  FreeRTOS_IP.c  FreeRTOS_Sockets.c  FreeRTOS_Stream_Buffer.c  FreeRTOS_TCP_IP.c  FreeRTOS_TCP_WIN.c  FreeRTOS_UDP_IP.c  History.txt  MISRA.md  README.md  manifest.yml
libs/FreeRTOSv202012.04-LTS/FreeRTOS/FreeRTOS-Plus-TCP/include/: FreeRTOSIPConfigDefaults.h  FreeRTOS_ARP.h  FreeRTOS_DHCP.h  FreeRTOS_DNS.h  FreeRTOS_IP.h  FreeRTOS_IP_Private.h  FreeRTOS_Sockets.h  FreeRTOS_Stream_Buffer.h  FreeRTOS_TCP_IP.h  FreeRTOS_TCP_WIN.h  FreeRTOS_UDP_IP.h  FreeRTOS_errno_TCP.h  IPTraceMacroDefaults.h  NetworkBufferManagement.h  NetworkInterface.h
libs/FreeRTOSv202012.04-LTS/FreeRTOS/coreMQTT/: CHANGELOG.md  MISRA.md  README.md  lexicon.txt  manifest.yml
libs/FreeRTOSv202012.04-LTS/FreeRTOS/coreMQTT/source/: core_mqtt.c  core_mqtt_serializer.c  core_mqtt_state.c
libs/FreeRTOSv202012.04-LTS/FreeRTOS/coreMQTT/test/: CMakeLists.txt
libs/FreeRTOSv202012.04-LTS/FreeRTOS/corePKCS11/: CHANGELOG.md  MISRA.md  README.md  lexicon.txt  manifest.yml  pkcsFilePaths.cmake
libs/FreeRTOSv202012.04-LTS/FreeRTOS/corePKCS11/source/: core_pkcs11.c  core_pki_utils.c
libs/FreeRTOSv202012.04-LTS/FreeRTOS/corePKCS11/test/: CMakeLists.txt
libs/FreeRTOSv202012.04-LTS/aws/ota-for-aws-iot-embedded-sdk/: CHANGELOG.md  MISRA.md  README.md  manifest.yml  otaFilePaths.cmake
libs/FreeRTOSv202012.04-LTS/aws/ota-for-aws-iot-embedded-sdk/source/: ota.c  ota_base64.c  ota_cbor.c  ota_http.c  ota_interface.c  ota_mqtt.c
libs/FreeRTOSv202012.04-LTS/aws/ota-for-aws-iot-embedded-sdk/test/: CMakeLists.txt
libs/FreeRTOSv202012.04-LTS/aws/ota-for-aws-iot-embedded-sdk/tools/: lexicon.txt
other/utils/: usbBulkEchoTest.py
other/utils/eclipse/: Template Debug.launch
other/utils/openocd/: jlink.cfg  openocd.sh  stm32f4x-proc.cfg
src/: main.cpp
src/config/: clock.cpp  gpio.cpp
src/freertos/: freertosHooks.c
src/segger/: SEGGER_SYSVIEW_Config_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.c
src/tasks/: init.cpp  ledblink.cpp  mytasks.cpp
(+405 files in other folders)
